tests/endtoend/failure/expected/error_notfloat.compile.out
error_notfloat.silly:1:7: error: NOT on non-integer type

    1 | PRINT NOT 3.14;
      |       ^
